--- a/Vikrant_Assignmnet_module_02.ipynb
+++ b/Vikrant_Assignmnet_module_02.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# MODULE_02 Assignment Name:- Vikrant kumar\n",
+        "# MODULE_02 Assignment Name:-Introduction to Web Development \n",
         "\n",
         "1. Explain the main components of client-server architecture and their functions.\n",
         "    - Answer:-> Client-server architecture is a model where multiple clients request services from a central server over a network. The client is a device or application, such as a web browser or mobile app, that sends requests to the server and processes the received data for user interaction. The server is a powerful computer or program responsible for handling client requests, managing data, and providing necessary resources like web pages, databases, or files. Communication between the client and server occurs through a network, which can be a local area network (LAN) or the internet. In some cases, middleware acts as an intermediary to facilitate communication, ensuring data translation, security, and session management. This architecture is widely used in web applications, cloud computing, and enterprise systems to provide scalable and efficient services.\n",
